--- a/index.html
+++ b/index.html
@@ -29,78 +29,80 @@
       </aside>
 
       <main class="col-10" id="gameCards">
+        <!--
         <div class="col-2 card">
           <div class="card-front jan-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front docker-logo"></div>
+          <div class="card-front vanjie-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front github-logo"></div>
+          <div class="card-front valentina-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front html-logo"></div>
+          <div class="card-front shangela-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front js-logo"></div>
+          <div class="card-front alyssa-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front mysql-logo"></div>
+          <div class="card-front aja-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front node-logo"></div>
+          <div class="card-front aiden-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front php-logo"></div>
+          <div class="card-front farrah-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front react-logo"></div>
+          <div class="card-front trixie-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front css-logo"></div>
+          <div class="card-front jan-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front docker-logo"></div>
+          <div class="card-front vanjie-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front github-logo"></div>
+          <div class="card-front valentina-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front html-logo"></div>
+          <div class="card-front shangela-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front js-logo"></div>
+          <div class="card-front alyssa-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front mysql-logo"></div>
+          <div class="card-front aja-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front node-logo"></div>
+          <div class="card-front aiden-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front php-logo"></div>
+          <div class="card-front farrah-pic"></div>
           <div class="card-back"></div>
         </div>
         <div class="col-2 card">
-          <div class="card-front react-logo"></div>
+          <div class="card-front trixie-pic"></div>
           <div class="card-back"></div>
         </div>
+      -->
       </main>
     </div>
     <div id="modal" class="modal-container hidden">
